blog page corrected

--- a/theme.ini
+++ b/theme.ini
@@ -5,6 +5,7 @@ _header = "type_partial_template"
 _main menu = "typemenu"
 _mobile elements = "type_partial_template"
 _news list = "type_news_list"
+_news list - main = "type_news_list"
 _scripts = "type_partial_template"
 _social links = "type_partial_template"
 _social share = "type_partial_template"
